[tool.poetry]
name = "cam-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cam_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
watchdog = "^3.0.0"
python-dotenv = "^1.0.0"
hachiko = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
